apps/prod/k9s-web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k9s-svc
  namespace: k9s
spec:
  selector:
    app: k9s
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 7681
      targetPort: 7681
