apps/prod/k9s-web/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: k9s-web
  namespace: k9s
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`${K9S_WEB_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: "auth-authelia@kubernetescrd"
      services:
        - name: k9s-svc
          port: 7681
